--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,15 +4,89 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#022868"
     tools:context=".MainActivity">
 
-    <TextView
+<!--    <EditText-->
+<!--        android:id="@+id/etEmail"-->
+<!--        android:layout_width="344dp"-->
+<!--        android:layout_height="50dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Your Email"-->
+<!--        android:inputType="textEmailAddress"-->
+<!--        tools:layout_editor_absoluteX="58dp"-->
+<!--        tools:layout_editor_absoluteY="398dp" />-->
+
+<!--    <EditText-->
+<!--        android:id="@+id/etpass"-->
+<!--        android:layout_width="344dp"-->
+<!--        android:layout_height="52dp"-->
+<!--        android:ems="10"-->
+<!--        android:hint="Your Password"-->
+<!--        android:inputType="textPassword"-->
+<!--        tools:layout_editor_absoluteX="58dp"-->
+<!--        tools:layout_editor_absoluteY="466dp" />-->
+
+<!--    <Button-->
+<!--        android:id="@+id/btnlogin"-->
+<!--        android:layout_width="342dp"-->
+<!--        android:layout_height="66dp"-->
+<!--        android:text="Log In"-->
+<!--        tools:layout_editor_absoluteX="58dp"-->
+<!--        tools:layout_editor_absoluteY="544dp" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView"-->
+<!--        android:layout_width="295dp"-->
+<!--        android:layout_height="26dp"-->
+<!--        android:text="Please log into your existing account"-->
+<!--        tools:layout_editor_absoluteX="72dp"-->
+<!--        tools:layout_editor_absoluteY="335dp" />-->
+
+<!--    <TextView-->
+<!--        android:id="@+id/textView3"-->
+<!--        android:layout_width="307dp"-->
+<!--        android:layout_height="43dp"-->
+<!--        android:text="Welcome Back!"-->
+<!--        android:textStyle="bold"-->
+<!--        tools:layout_editor_absoluteX="72dp"-->
+<!--        tools:layout_editor_absoluteY="265dp" />-->
+
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_margin="50dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_logpic" />
+
+    <TextView
+        android:id="@+id/welcometext"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="welcome back!"
+        android:textColor="@color/white"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/imageView3" />
+
+    <TextView
+        android:id="@+id/Pleaselogin"
+        android:layout_margin="20dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="please log in"
+        android:textColor="@color/white"
+        android:textSize="17sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/welcometext"/>
+
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
