--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -93,7 +93,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/edit_round"
-        android:paddingLeft="10dp"
+        android:padding="20dp"
         android:hint="Your Email"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
@@ -108,7 +108,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="20dp"
         android:background="@drawable/edit_round"
-        android:paddingLeft="10dp"
+        android:padding="20dp"
         android:hint="Your Password"
         android:inputType="textEmailAddress"
         android:textColorHint="@color/white"
@@ -117,13 +117,19 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/email" />
 
-    <Button
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="50dp"
-        android:text="login"
+        android:drawableLeft="@drawable/ic_logpic"
+        android:padding="20dp"
+        android:elevation="5dp"
+        android:gravity="center"
+        android:textStyle="bold"
+        android:textSize="20sp"
+        android:text="Log in"
         android:textColor="@color/white"
-        android:backgroundTint="#2BC990"
+        android:background="@drawable/button_round"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/password"
